samples/_failures_safe/1761609398_be4aa3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec89189c.c: In function ‘main’:
./samples/SAFE/__tmp_ec89189c.c:155:5: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  155 |     print
      |     ^~~~~
      |     printf
./samples/SAFE/__tmp_ec89189c.c:155:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ec89189c.c:155:10: error: expected ‘;’ at end of input
  155 |     print
      |          ^
      |          ;
./samples/SAFE/__tmp_ec89189c.c:155:5: error: expected declaration or statement at end of input
  155 |     print
      |     ^~~~~
